# NCNN-Deployment-image-classification-example

./: CMakeLists.txt  LICENSE.md  README.md  image_classifier.cpp  onnx2ncnn
models/: image_classifier.onnx  image_classifier.param  image_classifier.pth  image_classifier_opt.param  image_classifier_sim.onnx
scripts/: export2onnx.py  test.py  train.py
